# mips-emulator

./: README.md  flake.nix  mips.cabal
src/: MIPS.hs
src/MIPS/: Decoder.hs  Instructions.hs  Loader.hs  Memory.hs  Registers.hs  Types.hs
