cabal-version:      3.0
name:               mips
version:            0.1.0.0
license:            MIT
license-file:       LICENSE
author:             Sean O'Mara
maintainer:         mseanomara@gmail.com
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  MIPS
    other-modules:    MIPS.Types
                    , MIPS.Memory
                    , MIPS.Registers
    -- other-extensions:
    build-depends:    base ^>=4.18.2.1
                    , containers
                    , vector
                    , mtl
    hs-source-dirs:   src
    default-language: Haskell2010
